# message-board

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
core/: settings.py  urls.py
message_board/: models.py  urls.py  views.py
message_board/migrations/: 0001_initial.py
message_board/templates/message_board/: base.html  message_board.html  message_card_partial.html
tailwind_theme/static_src/: package-lock.json  tailwind.config.js
tailwind_theme/static_src/src/: styles.css
