[tool.poetry]
name = "message-board"
version = "0.1.0"
description = "A Django-based anonymous message board web application."
authors = ["Hojayfa Rahman <hojayfarahman@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
dj-database-url = "^2.3.0"

[tool.poetry.group.dev.dependencies]
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
djlint = "^1.35.2"

[tool.djlint]
profile = "django"
blank_line_after_tag = "load,extends"
line_break_after_multiline_tag = true
preserve_blank_lines = true
indent = 2